--- a/Manual/Sid Hoffrenchman.html
+++ b/Manual/Sid Hoffrenchman.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="font.css">
+    <link rel="stylesheet" type="text/css" href="css/font.css">
   </head>
   <body>
     <div class="section">
@@ -19,39 +19,34 @@
           <img src="img/Component/Sid Hoffrenchman.svg" class="diagram">
           <h2>On the Subject of Sid Hoffrenchman</h2>
           <p class="flavour-text">Using the most state-of-the-art coroutiniest technologies, we can see what an actual needy module with Homestar Runner would be like without the risk of personal injury. Or vomiting.</p>
-          <p>Upon activation, Homestar Runner will ask the defuser "Sid Hoffman or Sid Frenchman?" and there will be 1 to 4 characters present in the background. Use the tables below to determine which option has more characters that are present, and submit that answer.</p>
-          <h3>Reference Tables</h3>
-          <table style="margin-left:auto;margin-right:auto">
-            <tbody><tr>
-              <th colspan="5"><center>Sid Hoffman</center></th>
+          <p>Upon activation, Homestar Runner will ask the defuser “Sid Hoffman or Sid Frenchman?”, and there will be 1 to 4 characters present in the background. Use the tables below to determine which option has a greater amount of characters present, and submit the appropriate answer.</p>
+          <table style="margin-left:auto;margin-right:auto;text-align:center"><tbody>
+            <tr>
+              <th colspan="5">Sid Hoffman</th>
               </tr>
               <tr>
-                <td><center><img src="img/sid/marzipan.png" height="128px"></center>
-                  <center>Marzipan</center></td>
-                <td><center><img src="img/sid/strongbad.png" height="128px"></center><center>Strong Bad</center></td>
-                <td><center><img src="img/sid/coachz.png" height="128px"></center><center>Coach Z</center></td>
-                <td><center><img src="img/sid/kot.png" height="128px"></center>
-                  <center>The King of Town</center></td>
-                <td colspan="2"><center><img src="img/sid/homsar.png" height="128px"></center><center>Homsar</center></td>
+                <td><img src="img/sid/marzipan.png" height="128px"><br>Marzipan</td>
+                <td><img src="img/sid/strongbad.png" height="128px"><br>Strong Bad</td>
+                <td><img src="img/sid/coachz.png" height="128px"><br>Coach Z</td>
+                <td><img src="img/sid/kot.png" height="128px"><br>The King of Town</td>
+                <td><img src="img/sid/homsar.png" height="128px"><br>Homsar</td>
               </tr>
             </tbody></table>
           <br>
-          <table style="margin-left:auto;margin-right:auto">
-            <tbody><tr>
-              <th colspan="5"><center>Sid Frenchman</center></th>
+          <table style="margin-left:auto;margin-right:auto;text-align:center"><tbody>
+            <tr>
+              <th colspan="5">Sid Frenchman</th>
               </tr>
               <tr>
-                <td><center><img src="img/sid/pompom.png" height="128px"></center>
-                  <center>Pom Pom</center></td>
-                <td><center><img src="img/sid/strongmad.png" height="128px"></center><center>Strong Mad</center></td>
-                <td><center><img src="img/sid/bubs.png" height="128px"></center><center>Bubs</center></td>
-                <td><center><img src="img/sid/strongsad.png" height="128px"></center>
-                  <center>Strong Sad</center></td>
-                <td style="vertical-align:bottom;text-align:center" colspan="2"><center><img src="img/sid/thecheat.png" height="70px"></center><center>The Cheat</center></td>
+                <td><img src="img/sid/pompom.png" height="128px"><br>Pom Pom</td>
+                <td><img src="img/sid/strongmad.png" height="128px"><br>Strong Mad</td>
+                <td><img src="img/sid/bubs.png" height="128px"><br>Bubs</td>
+                <td><img src="img/sid/strongsad.png" height="128px"><br>Strong Sad</td>
+                <td style="vertical-align:bottom"><img src="img/sid/thecheat.png" height="70px"><br>The Cheat</td>
               </tr>
             </tbody></table>
           <h3>Tiebreaker</h3>
-          <p>If the current score (white number in top left corner) is even, submit Sid Hoffman. Otherwise, submit Sid Frenchman.</p>
+          <p>Submit Sid Hoffman if the current score (the white number in the top left corner) is even, and Sid Frenchman if it is odd.</p>
         </div>
         <div class="page-footer relative-footer">Page 1 of 1</div>
       </div>
