--- a/Manual/Main Page.html
+++ b/Manual/Main Page.html
@@ -29,7 +29,7 @@
             <tr><td>more biz cas fri</td></tr>
             <tr><td>short shorts!</td></tr>
             </tbody></table>
-          <p>One of the bubbles will have one of these messages, consider that the first bubble of the cycle. Take the color of each bubble as the column of the below table, and the menu number of the background as the row to get three menu buttons.</p>
+          <p>One of the bubbles will have one of these messages. Consider that bubble the first of the cycle. Take the color of each bubble as the column of the below table, and the menu number of the background as the row to get three menu buttons.</p>
           <table><tbody>
             <tr><th>#</th><th>Code</th><td style="background-color:#0000ff;color:#ffffff">B</td><td style="background-color:#ff0000;color:#ffffff">R</td><td style="background-color:#00a000;color:#ffffff">G</td><td style="background-color:#ffff00">Y</td><th>#</th><th>Code</th><td style="background-color:#0000ff;color:#ffffff">B</td><td style="background-color:#ff0000;color:#ffffff">R</td><td style="background-color:#00a000;color:#ffffff">G</td><td style="background-color:#ffff00">Y</td><th>#</th><th>Code</th><td style="background-color:#0000ff;color:#ffffff">B</td><td style="background-color:#ff0000;color:#ffffff">R</td><td style="background-color:#00a000;color:#ffffff">G</td><td style="background-color:#ffff00">Y</td></tr>
             <tr><th>1</th><td>SPC</td><td>T</td><td>C</td><td>G</td><td>D</td><th>10</th><td>OLD</td><td>G</td><td>E</td><td>D</td><td>C</td><th>19</th><td>SHW</td><td>G</td><td>D</td><td>C</td><td>S</td></tr>
@@ -42,9 +42,9 @@
             <tr><th>8</th><td>SKY</td><td>S</td><td>D</td><td>T</td><td>E</td><th>17</th><td>IUP</td><td>G</td><td>E</td><td>S</td><td>T</td><th>26</th><td>XRX</td><td>G</td><td>D</td><td>T</td><td>E</td></tr>
             <tr><th>9</th><td>ART</td><td>C</td><td>G</td><td>E</td><td>D</td><th>18</th><td>EHS</td><td>S</td><td>T</td><td>C</td><td>D</td><th>27</th><td>TRG</td><td>S</td><td>T</td><td>G</td><td>C</td></tr>
             </tbody></table>
-          <p>The letters represent '<b>T</b>oons, <b>G</b>ames, <b>C</b>haracters, <b>D</b>ownloads, <b>S</b>tore, and <b>E</b>-mail. Take the buttons in the order of the bubble's colors, and convert their effects' menu numbers to their alphanumeric positions (1=A, 2=B, etc.; An effect from menu 27 is not used.)</p>
+          <p>The letters represent '<b>T</b>oons, <b>G</b>ames, <b>C</b>haracters, <b>D</b>ownloads, <b>S</b>tore, and <b>E</b>-mail. Take the buttons in the order of the bubble's colors, and convert their effects' menu numbers to their alphanumeric positions (1=A, 2=B, etc.; An effect from menu 27 is not used).</p>
         </div>
-        <div class="page-footer relative-footer">Page 1 of 2</div>
+        <div class="page-footer relative-footer">Page 1 of 8</div>
       </div>
       <div class="page page-bg-02">
         <div class="page-header">
@@ -53,15 +53,15 @@
         </div>
         <div class="page-content">
           <h3>Decryption</h3>
-          <p>If the serial number contains three unique letters, remove duplicates and numbers and arrange them in alphabetical order. The changes made in position in the serial number from original to alphabetical order should be replicated in the module's three-letter sequence.</p>
-          <p>The above step should be skipped if the condition is not met. Take the effects of the 3 buttons not taken from the table from top to bottom, find their menus' codes, and create an 18-letter string. The first button's letters are 1, 2, and 3, the second's are 4, 5, and 6, and the third's are 7, 8, and 9. Take the codes of the background and Homestar and convert the number of letters in each bubble message to their alphanumeric positions (ignore spaces and punctutation), and concatenate them to the string. From there, arrange them in a rectangle as shown in the picture.</p>
-          <img src="img/mp/Connect_the_dots.png" style="float:left;margin-right:20px;margin-bottom:20px;width:30%"><p>Skew it (left if green or yellow is not in the sequence, right if both are), squish it, and turn it all around (reverse the entire string if Homestar does not have the default voice lines; if he does, swap 1st and 2nd with 17th and 18th, 3rd and 4th with 15th and 16th, etc) to rearrange the letters. After doing so, go through each letter in the string, and if it has already appeared before, replace it with the letter that comes after it in the alphabet, replacing it more than once and/or looping around if necessary to ensure each letter is unique. Insert this code in reading order into a 13x2 grid, with the remaining 8 letters in alphabetical order occupying the last 8 spots. From here, find the three letters of the message and replace them with the letters below or above them.</p>
+          <p>If the serial number contains three unique letters, remove duplicates and numbers and arrange them in alphabetical order. The changes made in position in the serial number from original to alphabetical order should be replicated in the module's three-letter sequence. <b>If this condition is not met, skip this step.</b></p>
+          <p>Take the effects of the 3 buttons not in the table from top to bottom, find their menus' codes, and create an 18-letter string. The first button's letters are 1, 2, and 3, the second button's letters are 4, 5, and 6, and the third button's letters are 7, 8, and 9. Take the codes of the background (10, 11, and 12) and Homestar (13, 14, and 15), then convert the number of letters in each bubble message to their alphanumeric positions (16, 17, and 18), and concatenate them all to the string. From there, arrange them in a rectangle as shown in the picture.</p>
+          <img src="img/mp/Connect_the_dots.png" style="float:left;margin-right:20px;margin-bottom:20px;width:30%"><p>Skew it (left if green or yellow is not in the sequence, right if both are), squish it as demonstrated in the photo, and turn it all around: reverse the entire string if Homestar does not have the default voice lines. If he does, turn it all around in pairs; swap the 1st letter with the 17th, the second with the 18th, the 3rd with the 15th, the 4th with the 16th, etc. to rearrange the letters. After doing so, go through each letter in the string. If the letter has occurred previously, replace it with the next letter in the alphabet. Replace it more than once and/or loop around if necessary to ensure each letter is unique. Insert this code in reading order into a 13x2 grid, with the remaining 8 letters in alphabetical order occupying the last 8 spots. From here, find the three letters of the message and replace them with the letters below or above them.</p>
           <p>Finally, shift them forwards in the alphabet via a Caesar cipher using the number of Homestar's menu of origin.</p>
-          <p>The resulting string should match up with one of the 27 three-letter codes in the above table. Press the numbered button along the bottom that corresponds to this code to solve the module. A strike will <u>not</u> regenerate the module's elements. Upon solving, the bubble in the corner will change to display information about the bomb such as number of solved modules, boss module presence, etc., and the effects will no longer play.</p>
+          <p>The resulting string should match up with one of the 27 three-letter codes in the above table. Press the numbered button along the bottom that corresponds to this code to solve the module. A strike will <u>not</u> regenerate the module's elements. Upon solving, the effects will no longer play.</p>
         </div>
-        <div class="page-footer relative-footer">Page 2 of 2</div>
+        <div class="page-footer relative-footer">Page 2 of 8</div>
       </div>
-      <div class="page page-bg-04">
+      <div class="page page-bg-03">
         <div class="page-header">
           <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
           <span class="page-header-section-title">Main Page</span>
@@ -80,7 +80,7 @@
             <li>Downloads: 24</li>
             <li>Store: 18</li>
             <li>E-mail: 12</li>
-            <li>Initial encrypted message: uses Toons, Email, and Downloads, MLX</li>
+            <li>Initial encrypted message uses Toons, Email, and Downloads: MLX</li>
             <li>Serial number: AR5AL7</li>
             <li>Letters: ARL</li>
             <li>Serial number rearrangement: ALR (second and third letter swapped)</li>
@@ -99,10 +99,10 @@
           <ul>
             <li>After translation: PZO</li>
             <li>Shift forwards by 8: HRG</li>
-            <li>Answer: Menu </li>
+            <li>Answer: Menu ##</li>
           </ul>
         </div>
-        <div class="page-footer relative-footer">Page 1 of 3</div>
+        <div class="page-footer relative-footer">Page 3 of 8</div>
       </div>
       <div class="page page-bg-04">
         <div class="page-header">
@@ -115,7 +115,7 @@
             <tr>
               <td><b>1.</b><br><img src=img/mp/1.png width=209px><br>BG: The Moon<br>HS: Orange Spacesuit</td>
               <td><b>2.</b><br><img src=img/mp/2.png width=209px><br>BG: The Alps<br>HS: Green Overalls</td>
-              <td><b>3.</b><br><img src=img/mp/3.png width=209px><br>BG: A beach<br>HS: Yellow Shirt With Flowers</td>
+              <td><b>3.</b><br><img src=img/mp/3.png width=209px><br>BG: A beach<br>HS: Yellow Shirt w/ Flowers</td>
             </tr>
             <tr>
               <td><b>4.</b><br><img src=img/mp/4.png width=209px><br>BG: Bowling alley<br>HS: Red Polo Shirt</td>
@@ -124,12 +124,12 @@
             </tr>
             <tr>
               <td><b>7.</b><br><img src=img/mp/7.png width=209px><br>BG: Graveyard<br>HS: Pink, brains visible</td>
-              <td><b>8.</b><br><img src=img/mp/8.png width=209px><br>BG: Falling through the sky<br>HS: Upside down, star peeling off</td>
+              <td><b>8.</b><br><img src=img/mp/8.png width=209px><br>BG: Falling through the sky<br>HS: Upside Down</td>
               <td><b>9.</b><br><img src=img/mp/9.png width=209px><br>BG: Notebook sketch<br>HS: Drawn outline</td>
             </tr>
             </tbody></table>
         </div>
-        <div class="page-footer relative-footer">Page 1 of 3</div>
+        <div class="page-footer relative-footer">Page 4 of 8</div>
       </div>
       <div class="page page-bg-05">
         <div class="page-header">
@@ -156,7 +156,7 @@
             </tr>
             </tbody></table>
         </div>
-        <div class="page-footer relative-footer">Page 2 of 3</div>
+        <div class="page-footer relative-footer">Page 5 of 8</div>
       </div>
       <div class="page page-bg-06">
         <div class="page-header">
@@ -183,19 +183,18 @@
             </tr>
             </tbody></table>
         </div>
-        <div class="page-footer relative-footer">Page 3 of 3</div>
+        <div class="page-footer relative-footer">Page 6 of 8</div>
       </div>
-      <div class="page page-bg-03">
+      <div class="page page-bg-07">
         <div class="page-header">
           <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
           <span class="page-header-section-title">Main Page Notes</span>
         </div>
         <div class="page-content">
-          <h4>Notes to self:</h4>
+          <h3>Notes to self:</h3>
           <p>Add GIFs of button effects for appendix as well</p>
-          <p>Encrypting:</p>
-          <ul>
-            <li>Randomly choose number from 1-27 for answer, BG, and HS, and 3 colors</li>
+          <h4>Encrypting:</h4><ul>
+            <li>Randomly choose number from 1-27 for answer, BG, HS, and 3 colors</li>
             <li>Get 3-letter code from answer</li>
             <li>Caesar cipher it <i>backwards</i> w/ Homestar's number</li>
             <li>Randomly generate effects for 3 buttons not chosen by BG and colors</li>
@@ -205,17 +204,7 @@
             <li>Determine buttons to assign effects to w/ same procedure as expert</li>
             <li>Convert letter to number and assign to 3 buttons, ensuring BG/color pattern is followed</li>
           </ul>
-          <p>Twitch Plays:</p>
-          <ul>
-            <li>Help message: "!# cycle to view all effects, !# t/g/c/d/s/e to view specific buttons' effects (can be stringed together with no spaces), and !# (number) to press a number button. !# unwiden to hover over the button with menu effect 22 repeatedly until it returns to its normal width."<ul><li>Menu effect 22 is the button slightly widening, and Homestar's head sliding to the right.</li>
-              </ul></li></ul>
-          <p>Souvenir support:</p>
-            <ul>
-              <li>"What menu was the background/Homestar from?"</li>
-              <li>"What menu was the 'Toons/Games/Characters/Downloads/Store/E-mail button's effect from?"</li>
-              <li>Answers written as: "1. The Moon", "16. Wintertime", "23. Rear-view", etc.</li>
-          </ul>
-          <p>Ruleseed support:</p><ul>
+          <h4>Ruleseed support:</h4><ul>
           <li>Possible first messages not entirely random, one chosen randomly from each of rows below this list</li>
           <li>For button table:
             <ul><li>Each letter should occur 6 times within the range 1-9, 6 times within 10-18, and 6 times within 19-27</li>
@@ -227,8 +216,28 @@
           <p>play a game / latest toon / latest merch<br>new strong bad email / new sbemail a-comin' / email soon<br>new toon soon / new cartoon! / hey, a new toon!!<br>more biz cas fri / biz cas fri / new biz cas fri!<br>short shorts! / new short shortly / new short!</p>
           </ul>
         </div>
-        <div class="page-footer relative-footer">Page 1 of 1</div>
+        <div class="page-footer relative-footer">Page 7 of 8</div>
       </div>
+      <div class="page page-bg-08">
+        <div class="page-header">
+          <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
+          <span class="page-header-section-title">Main Page Notes</span>
+        </div>
+        <div class="page-content">
+          <h4>Twitch Plays:</h4><ul>
+            <li>Help message: "!{0} cycle to view all effects, !# t/g/c/d/s/e to view specific buttons' effects (can be stringed together with no spaces), and !{0} (number) to press a number button. !{0} unwiden to hover over the button with menu effect 22 repeatedly until it returns to its normal width."<ul><li>Menu effect 22 is the button slightly widening.</li>
+              </ul></li></ul>
+          <h4>Souvenir support:</h4><ul>
+              <li>"What menu was the background/Homestar from?"</li>
+              <li>"What menu was the 'Toons/Games/Characters/Downloads/Store/E-mail button's effect from?"</li>
+              <li>Answers written as: "1. The Moon", "16. Wintertime", "23. Rear-view", etc.</li>
+          </ul>
+          <h4>The module itself:</h4><ul>
+            <li>The problem with it being a cipher is that all the work would eventually culminate to just one number from 1-27</li>
+            <li>Can't really be a boss module since there's so much information to take in each time<ul><li>Or maybe... Just the numbers of the effects, background, Homestar should be taken in to produce a new number</li></ul></li>
+          </ul>
+        </div>
+        <div class="page-footer relative-footer">Page 8 of 8</div>
     </div>
   </body>
 </html>
