Tweak 3-letter codes for MP manual

--- a/Manual/Main Page.html
+++ b/Manual/Main Page.html
@@ -21,7 +21,7 @@
           <p class="flavour-text">homestarrunner.net: "It's dot com!"</p>
           <p>On this module will appear a Homestar Runner main page. However, Homestar, the background and the button effects will come from various different main pages (see appendix FHQWHG4D5 for reference and description).</p>
           <p>In the top right corner, there will be a bubble cycling through 3 messages and changing color.</p>
-          <table style="float:left;margin-right:20px;margin-bottom:20px"><tbody>
+          <table style="text-align:center;float:left;margin-right:20px;margin-bottom:20px"><tbody>
             <tr><th>POSSIBLE FIRST MESSAGES</th></tr>
             <tr><td>play a game</td></tr>
             <tr><td>new strong bad email</td></tr>
@@ -30,16 +30,16 @@
             <tr><td>short shorts!</td></tr>
             </tbody></table>
           <p>One of the bubbles will have one of these messages. Consider that bubble the first of the cycle. Take the color of each bubble as the column of the below table, and the menu number of the background as the row to get three menu buttons.</p>
-          <table><tbody>
+          <table style="text-align:center"><tbody>
             <tr><th>#</th><th>Code</th><td style="background-color:#0000ff;color:#ffffff">B</td><td style="background-color:#ff0000;color:#ffffff">R</td><td style="background-color:#00a000;color:#ffffff">G</td><td style="background-color:#ffff00">Y</td><th>#</th><th>Code</th><td style="background-color:#0000ff;color:#ffffff">B</td><td style="background-color:#ff0000;color:#ffffff">R</td><td style="background-color:#00a000;color:#ffffff">G</td><td style="background-color:#ffff00">Y</td><th>#</th><th>Code</th><td style="background-color:#0000ff;color:#ffffff">B</td><td style="background-color:#ff0000;color:#ffffff">R</td><td style="background-color:#00a000;color:#ffffff">G</td><td style="background-color:#ffff00">Y</td></tr>
             <tr><th>1</th><td>SPC</td><td>T</td><td>C</td><td>G</td><td>D</td><th>10</th><td>OLD</td><td>G</td><td>E</td><td>D</td><td>C</td><th>19</th><td>SHW</td><td>G</td><td>D</td><td>C</td><td>S</td></tr>
             <tr><th>2</th><td>ALP</td><td>D</td><td>S</td><td>C</td><td>T</td><th>11</th><td>NVA</td><td>E</td><td>C</td><td>S</td><td>T</td><th>20</th><td>STR</td><td>D</td><td>S</td><td>E</td><td>G</td></tr>
             <tr><th>3</th><td>MBD</td><td>G</td><td>E</td><td>D</td><td>T</td><th>12</th><td>JLY</td><td>C</td><td>G</td><td>D</td><td>S</td><th>21</th><td>ASP</td><td>C</td><td>E</td><td>T</td><td>D</td></tr>
             <tr><th>4</th><td>BWL</td><td>E</td><td>G</td><td>S</td><td>C</td><th>13</th><td>QBT</td><td>E</td><td>D</td><td>C</td><td>T</td><th>22</th><td>VRS</td><td>C</td><td>T</td><td>S</td><td>G</td></tr>
-            <tr><th>5</th><td>SSC</td><td>C</td><td>E</td><td>T</td><td>S</td><th>14</th><td>WSH</td><td>T</td><td>E</td><td>G</td><td>D</td><th>23</th><td>ZYX</td><td>S</td><td>T</td><td>E</td><td>D</td></tr>
+            <tr><th>5</th><td>WFH</td><td>C</td><td>E</td><td>T</td><td>S</td><th>14</th><td>WSH</td><td>T</td><td>E</td><td>G</td><td>D</td><th>23</th><td>RVZ</td><td>S</td><td>T</td><td>E</td><td>D</td></tr>
             <tr><th>6</th><td>ANG</td><td>D</td><td>T</td><td>S</td><td>G</td><th>15</th><td>FLS</td><td>C</td><td>S</td><td>T</td><td>G</td><th>24</th><td>BLR</td><td>D</td><td>E</td><td>G</td><td>C</td></tr>
-            <tr><th>7</th><td>IOO</td><td>G</td><td>E</td><td>C</td><td>S</td><th>16</th><td>SNW</td><td>D</td><td>G</td><td>E</td><td>S</td><th>25</th><td>BCF</td><td>T</td><td>C</td><td>E</td><td>S</td></tr>
-            <tr><th>8</th><td>SKY</td><td>S</td><td>D</td><td>T</td><td>E</td><th>17</th><td>IUP</td><td>G</td><td>E</td><td>S</td><td>T</td><th>26</th><td>XRX</td><td>G</td><td>D</td><td>T</td><td>E</td></tr>
+            <tr><th>7</th><td>RIP</td><td>G</td><td>E</td><td>C</td><td>S</td><th>16</th><td>SNW</td><td>D</td><td>G</td><td>E</td><td>S</td><th>25</th><td>BCF</td><td>T</td><td>C</td><td>E</td><td>S</td></tr>
+            <tr><th>8</th><td>SKY</td><td>S</td><td>D</td><td>T</td><td>E</td><th>17</th><td>IUP</td><td>G</td><td>E</td><td>S</td><td>T</td><th>26</th><td>XRF</td><td>G</td><td>D</td><td>T</td><td>E</td></tr>
             <tr><th>9</th><td>ART</td><td>C</td><td>G</td><td>E</td><td>D</td><th>18</th><td>EHS</td><td>S</td><td>T</td><td>C</td><td>D</td><th>27</th><td>TRG</td><td>S</td><td>T</td><td>G</td><td>C</td></tr>
             </tbody></table>
           <p>The letters represent '<b>T</b>oons, <b>G</b>ames, <b>C</b>haracters, <b>D</b>ownloads, <b>S</b>tore, and <b>E</b>-mail. Take the buttons in the order of the bubble's colors, and convert their effects' menu numbers to their alphanumeric positions (1=A, 2=B, etc.; An effect from menu 27 is not used).</p>
