Draft Sbemail Songs manual

--- a/Manual/Main Page.html
+++ b/Manual/Main Page.html
@@ -16,7 +16,7 @@
           <span class="page-header-section-title">Main Page</span>
         </div>
         <div class="page-content">
-          <img src="Module-Name.svg" class="diagram">
+          <img src="img/Component/Placeholder.svg" class="diagram">
           <h2>On the Subject of Main Page</h2>
           <p class="flavour-text">homestarrunner.net: "It's dot com!"</p>
           <p>On this module will appear a Homestar Runner main page. However, Homestar, the background and the button effects will come from various different main pages (see appendix FHQWHG4D5 for reference and description).</p>
