--- a/Manual/HTML/Sbemail Songs.html
+++ b/Manual/HTML/Sbemail Songs.html
@@ -22,8 +22,6 @@
                 <img src="img/Component/Placeholder.svg" class="diagram">
                 <h2>On the Subject of Sbemail Songs</h2>
                 <p class="flavour-text">Where would I be without my Sbemail Songs?</p>
-                
-                <p>See <a href="http://hrwiki.org/wiki/Strong_Bad_Email_Intros">here</a> for a full list of sbemail transcriptions. <b>NOTE: In the case of more than one of the same number, such as 122a/122b or 193/193½ where the transcriptions are completely different, only the first of each can appear on the module.</b></p>
 
                 <table style="float:left;margin-right:20px;margin-bottom:10px"><tbody>
                     <tr><td>Tandy 400</td><td>XOR</td></tr>
@@ -34,13 +32,10 @@
                     <tr><td>Lappier</td><td>NAND</td></tr>
                 </tbody></table>
 
-                <p>This module will have a computer-like background. There are four buttons labeled song 1-4, four more orthogonal arrow buttons, and two buttons labeled "flip" and "submit". Take the number associated with each sbemail and convert it to binary, with zeros added to the left to make it 8 bits long if needed. Concatenate these to get a 32-bit string, and perform the operation associated with the background on each pair of bits (i.e. the 1st and 2nd bit, the 3rd and 4th bit, etc.). Arrange the resulting 16 bits into a 4x4 grid in reading order to get the initial grid.</p>
-                <table style="text-align:center"><thead><tr><th>There are<br>at least:</th><th>The serial<br>number contains:</th><th>The module contains:</th><th>The initial grid contains:</th></tr></thead><tbody>
-                    <tr><td>2 lit indicators</td><td>Any vowels</td><td>A prime-<br>numbered<br>sbemail song</td><td>A 0 in the<br>top-left corner</td></tr>
-                    <tr><td>5 modules</td><td>More numbers<br>than letters</td><td>A sbemail song<br>from the<br>Compy era<br>(41-118)</td><td>Two 1s horizontally<br>adjacent to<br>each other</td></tr>
-                    <tr><td>3 battery<br>holders</td><td>Any letter<br>in "SBEMAIL"</td><td>A sbemail<br>song in which<br>Strong Bad does<br>not say "email"<br>or "sbemail"</td><td>Five or more 1s</td></tr>
-                    <tr><td>3 different<br>port types</td><td>Digits that add<br>up to 15 or more</td><td>Two sbemail song<br> numbers that both<br>end in the same<br>digit</td><td>A row or column<br>with two of<br>each digit</td></tr>
-                </tbody></table>
+                <p>This module will have a computer-like background. There are four buttons labeled song 1-4, four more orthogonal arrow buttons, and two buttons labeled "flip" and "submit".</p>
+                <p>Each of the song buttons will play a short song, called a "sbemail song", that has a number associated with it. See <a href="http://hrwiki.org/wiki/Strong_Bad_Email_Intros">here</a> for a full list of sbemail song transcriptions. <b>NOTE: In the case of more than one of the same number, such as 122a/122b or 193/193½ where the transcriptions are completely different, only the first of each can appear on the module.</b></p>
+                <p>Take the number associated with each sbemail song and convert it to binary, with zeros added to the left to make it 8 bits long if needed. Concatenate these to get a 32-bit string, and perform the operation associated with the background on each pair of bits (i.e. the 1st and 2nd bit, the 3rd and 4th bit, etc.; use the table above and to the left for reference). Arrange the resulting 16 bits into a 4x4 grid in reading order to get the initial grid.</p>
+                <p>Using the table on the next page, create another 4x4 grid of bits, placing a 1 in every true condition's spot and a 0 in every false condition's spot. Then apply one of the following patterns to it, depending on t</p>
             </div>
             <div class="page-footer relative-footer">Page 1 of 3</div>
         </div>
@@ -50,32 +45,21 @@
                 <span class="page-header-section-title">Sbemail Songs — Concept 1</span>
             </div>
             <div class="page-content">
-                <p>Check each condition in the above table to create a new 4x4 grid, putting a 1 if the condition is true and a 0 is it is not.</p>
+                <table style="text-align:center"><thead><tr><th>There are at least:</th><th>The serial number contains:</th><th>The module contains:</th><th>The initial grid contains:</th></tr></thead><tbody>
+                    <tr><td>2 lit indicators</td><td>Any vowels</td><td>A prime-numbered sbemail song</td><td>A 0 in the top-left corner</td></tr>
+                    <tr><td>5 modules</td><td>More numbers than letters</td><td>A sbemail song from the Compy era (41-118)</td><td>Two 1s horizontally adjacent to each other</td></tr>
+                    <tr><td>3 battery holders</td><td>Any letter in "SBEMAIL"</td><td>A sbemail song in which Strong Bad does not say "email" or "sbemail"</td><td>Five or more 1s</td></tr>
+                    <tr><td>3 different port types</td><td>Digits that add up to 15 or more</td><td>Two sbemail song numbers that both end in the same digit</td><td>A row or column with two of each digit</td></tr>
+                </tbody></table>
             </div>
             <div class="page-footer relative-footer">Page 2 of 3</div>
         </div>
         <div class="page page-bg-03">
             <div class="page-header">
                 <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-                <span class="page-header-section-title">Appendix Name</span>
+                <span class="page-header-section-title">Sbemail Songs — Concept 1</span>
             </div>
             <div class="page-content">
-                <h2>Appendix M: Additional Notes</h2>
-                <p>Here other things to keep in mind when making a manual page:</p>
-                <ul>
-                    <li><strong>There are comments <code>/* ... */</code> in the CSS code in the <code>&lt;style&gt;</code> blocks containing instructions. Follow those instructions before finishing your manual.</strong></li>
-                    <li>Normal and Needy module manual pages are formatted similarly. Widget manual pages are appendices and are formatted as such.</li>
-                    <li>Each manual or appendix page should have a <code>&lt;div class="page-footer...</code> at the bottom of the page, updated accordingly.</li>
-                    <li>Don't be afraid to ask for help if needed!</li>
-                    <li>
-                        A few things to reiterate:
-                        <ul>
-                            <li>Make sure to never forget closing tags (the ones with a <code>/</code> in them).</li>
-                            <li>For the most part, HTML versions of bolding and underlining is recommended.</li>
-                            <li>Italics are not used in vanilla manuals besides flavor text and references to appendices, and therefore is not included above. </li>
-                        </ul>
-                    </li>
-                </ul>
             </div>
             <div class="page-footer relative-footer">Page 3 of 3</div>
         </div>
