--- a/Manual/HTML/Sbemail Songs.html
+++ b/Manual/HTML/Sbemail Songs.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/font.css">
-    <link rel="stylesheet" type="text/css" href="css/Sbemail Songs/Sbemail Songs.css">
+    <style>
+        table thead.concept1table tr th{
+            border-top-style:hidden;
+            border-left-style:hidden;
+            border-right-style:hidden;
+        }
+        table.concept2table{
+            float:left;
+            clear:left;
+            margin-right:10px;
+            margin-bottom:5px;
+            text-align:center;
+        }
+    </style>
     <script src="js/ktane-utils.js"></script>
 </head>
 <body>
@@ -53,43 +66,35 @@
                 <img src="img/Component/Sbemail Songs 2.svg" class="diagram">
                 <h2>On the Subject of Sbemail Songs</h2>
                 <p class="flavour-text">Where would I be without my Sbemail Songs?</p>
-                <table style="float:left;margin-right:20px;margin-bottom:0px;text-align:center"><tbody>
-                    <tr><th>Wire</th><td>56781234</td></tr>
-                    <tr><th>Maze</th><td>21436587</td></tr>
-                    <tr><th>Simon</th><td>56341278</td></tr>
-                    <tr><th>Morse</th><td>12785634</td></tr>
-                    <tr><th>Button</th><td>87654321</td></tr>
-                    <tr><th>Other</th><td>12345678</td></tr>
-                </tbody></table>
-                <table style="float:left;margin-right:20px;margin-bottom:5px;text-align:center"><tbody>
-                    <tr><th>0-40</th><td>AND</td></tr>
-                    <tr><th>41-118</th><td>OR</td></tr>
-                    <tr><th>119-205</th><td>XOR</td></tr>
-                    <tr><th>205-220</th><td>NAND</td></tr>
-                    <tr><th>220-240</th><td>NOR</td></tr>
-                    <tr><th>240-255</th><td>XNOR</td></tr>
-                </tbody></table>
-                <table style="float:left;margin-right:20px;margin-bottom:0px;text-align:center"><tbody>
-                    <tr><th>Previous<br>digit was A-F</th><td>Add 5</td></tr>
-                    <tr><th>Stage<br>divisible by 6</th><td>Subtract 2</td></tr>
-                    <tr><th>Majority of<br>sequence is<br>even</th><td>Modulo 12</td></tr>
-                    <tr><th>Digit at this<br>point is odd</th><td>Multiply by 3</td></tr>
-                    <tr><th>No changes<br>have been made</th><td>Change digit to<br>10<sub>hexadecimal</sub><br>minus digit</td></tr>
-                </tbody></table>
-                <p>On this module will be a stage display, a larger rectangular display below, a play button and a 4x4 grid of hexadecimal digits. Pressing the play button will play a short song called a "sbemail song". Every time a <a href="https://ktane.timwi.de/More/Ignore%20Table.html#mod=sbemailsongs">non-ignored module</a> is solved, this module will change which sbemail song is played.</p>
+                    <table class="concept2table"><tbody>
+                        <tr><th>Wire</th><td>56781234</td></tr>
+                        <tr><th>Maze</th><td>21436587</td></tr>
+                        <tr><th>Simon</th><td>56341278</td></tr>
+                        <tr><th>Morse</th><td>12785634</td></tr>
+                        <tr><th>Button</th><td>87654321</td></tr>
+                        <tr><th>Other</th><td>12345678</td></tr>
+                    </tbody></table>
+                    <table class="concept2table"><tbody>
+                        <tr><th>0-40</th><td>AND</td></tr>
+                        <tr><th>41-118</th><td>OR</td></tr>
+                        <tr><th>119-205</th><td>XOR</td></tr>
+                        <tr><th>205-220</th><td>NAND</td></tr>
+                        <tr><th>220-240</th><td>NOR</td></tr>
+                        <tr><th>240-255</th><td>XNOR</td></tr>
+                    </tbody></table>
+                    <table class="concept2table"><tbody>
+                        <tr><th>Previous<br>digit was A-F</th><td>Add 5</td></tr>
+                        <tr><th>Stage<br>divisible by 6</th><td>Subtract 2</td></tr>
+                        <tr><th>Majority of<br>sequence is<br>even</th><td>Modulo 12</td></tr>
+                        <tr><th>Digit at this<br>point is odd</th><td>Multiply by 3</td></tr>
+                        <tr><th>No changes<br>have been made</th><td>Change digit to<br>10<sub>hex</sub> minus<br>digit</td></tr>
+                    </tbody></table>
+                <div style="font-size:11.5pt"><p>On this module will be a stage display in hexadecimal, a larger rectangular display below, a play button and a 4x4 grid of hexadecimal digits. Pressing the play button will play a short song called a "sbemail song". Every time a <a href="https://ktane.timwi.de/More/Ignore%20Table.html#mod=sbemailsongs">non-ignored module</a> is solved, this module will change which sbemail song is played.</p>
                 <p>See <a href="http://hrwiki.org/wiki/Strong_Bad_Email_Intros">here</a> for a full list of sbemail song transcriptions. <b>NOTE: In the case of more than one of the same number, such as 122a/122b or 193/193½ where the transcriptions are completely different, only the first of each can appear on the module.</b></p>
-                <p>At each stage, take the number associated with each sbemail song and convert it to binary. Rearrange the binary number as shown in the first table depending on what is in the name of the last solved module. For stage 1, before any modules are solved, do not make any changes. For modules that contain more than one of these names (e.g. Morse-A-Maze), apply all applicable transformations from the top down. Perform the appropriate bitwise operation on each pair of bits of the bitwise number using the second table to make the sequence 4 bits long, then convert it to a hexadecimal digit. Modify this digit according to the third table. If the digit exceeds 10<sub>hexadecimal</sub> at any point, modulo 10<sub>hexadecimal</sub> before continuing.</p>
+                <p>At each stage, take the number associated with the current sbemail song and convert it to binary, with zeros added to the left to make it 8 bits long if needed. Rearrange the binary number as shown in the first table depending on what was in the name of the last solved module. For modules that contain more than one of these names (e.g. Morse-A-Maze), apply all appropriate transformations from the top down. For stage 1, before any modules are solved, do not rearrange the binary number. On every pair of bits, perform the bitwise operator corresponding to the resulting number to make the sequence 4 bits long, then convert it to a hexadecimal digit. Modify this digit according to the third table. If the digit exceeds 10<sub>hex</sub> at any point, modulo 10<sub>hex</sub> before continuing.</p>
+                <p>Throughout solving modules, keep track of the resulting digits. After every non-ignored module is solved, the module will allow the 4x4 grid of buttons to be pressed. Submit the obtained sequence of hexadecimal digits to solve the module. There is no penalty for attempting to press any of the buttons in the 4x4 grid before this change.</p></div>
             </div>
-            <div class="page-footer relative-footer">Page 1 of 2</div>
-        </div>
-        <div class="page page-bg-02">
-            <div class="page-header">
-                <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-                <span class="page-header-section-title">Sbemail Songs — Concept 2</span>
-            </div>
-            <div class="page-content">
-            </div>
-            <div class="page-footer relative-footer">Page 2 of 2</div>
+            <div class="page-footer relative-footer">Page 1 of 1</div>
         </div>
     </div>
 </body>
